JumpScript/tests/baselines/reference/ClassDeclaration21.errors.txt
tests/cases/compiler/ClassDeclaration21.jump(3,5): error TS2389: Function implementation name must be '0'.


==== tests/cases/compiler/ClassDeclaration21.jump (1 errors) ====
    class C {
        0();
        1() { }
        ~
!!! error TS2389: Function implementation name must be '0'.
    }